# s3dlio

./: .dockerignore  .env  .gitignore  CHECKPOINT_SUMMARY.md  Cargo.toml  Dockerfile  Dockerfile.last  FILE_BENCH.md  HANDOFF-SESSION.md  KNOWN-ISSUES.md  LICENSE  O1-Rust-DLIO_integration.md  PR_DESCRIPTION.md  README.md  REMOTE_TESTING.md  SECURITY.md  aws-env  build_pyo3.sh  debug_async_pool.rs  demo_final_implementation.py  dlio_s3_test3.py  install_pyo3_wheel.sh  old.pyproject.toml  pyproject.toml  requirements.txt  s3dlio-metadata-extensions-plan.md  test_all_dlio_s3.py  test_new_dlio_s3.py
.cargo/: config.toml
.github/: ISSUE_TEMPLATE_npy_serialization.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: data_gen_migration.md  s3dlio-realism-epic.md
.github/workflows/: ci.yml  publish-pypi.yml  rust.yml  sync.yml
benches/: data_gen_comparison.rs  filesystem_io_benchmark.rs  performance_microbenchmarks.rs  rng_performance_benchmark.rs  s3_microbenchmarks.rs  simple_test.rs
configs/: test_all.sh  test_azure_multi.sh  test_azure_smoke.sh  test_config_hdf5.json
crates/s3dlio-oplog/: Cargo.toml  README.md
crates/s3dlio-oplog/docs/: COMPATIBILITY_TESTING.md  COMPATIBILITY_TESTING_SUMMARY.md
crates/s3dlio-oplog/examples/: oplog_replay_basic.rs  oplog_streaming_demo.rs
crates/s3dlio-oplog/src/: lib.rs  reader.rs  replayer.rs  types.rs  uri.rs
crates/s3dlio-oplog/tests/: integration_test.rs
docs/: AIStore_307_Redirect_Proposal.md  AIStore_Redirect_Status_v0.9.86.md  AIStore_redirect_implementation_v0.9.90.md  AZURE-RANGE-ENGINE-IMPLEMENTATION.md  BACKEND_IMPROVEMENT_PLAN.md  CANCELLATION-TOKEN-IMPLEMENTATION.md  CLI_GUIDE.md  COMBINED_PERFORMANCE_RECOMMENDATIONS.md  CONFIGURATION-HIERARCHY.md  CUSTOM_S3_CLIENT_ANALYSIS.md  Changelog.md  Checkpoint_Features.md  DATA_GEN_MIGRATION_SUMMARY.md  DEPRECATION-NOTICE-v0.9.4.md  DGEN_MIGRATION_ANALYSIS.md  DIRECTIO-RANGE-ENGINE-ANALYSIS.md  Data-Loader_Plan.md  Data-gen-enhance.md  DataLoader_README.md  Data_Generation_Performance.md  Efficient_logging.md  Environment_Variables.md  FILESYSTEM_IO_BENCHMARKING.md  GCS-API-Configuration.md  GCS-BACKEND-SELECTION.md  GCS-RAPID-ANALYSIS.md  GCS-RAPID-HANDOFF.md  GCS-RAPID-STORAGE.md  GCS-gRPC-Transport.md  GCS-gRPC_Fixes.md  GCS_BACKEND_IMPLEMENTATION_PLAN.md  GCS_BIDI_HANG_ANALYSIS.md  GCS_DEBUG_SUMMARY.md  GCS_Phase2_0-8-18.md  GCS_gRPC_Plan.md  GITHUB-ISSUE-op-log-backend-support.md  Get-Optimization_plan.md  HANDOFF_v0-9-50.md  HTTP2_ALPN_INVESTIGATION.md  Hardware_Detection_API.md  (+55 more)
docs/NeedReview/: Development_Summary_30hrs.md  Enhanced_Async_Pool_DataLoader.md  Phase2_Streaming_PUT_Plan.md
docs/analysis/: MPU-Changes-Impact-And-Get-Put-Opportunities.md
docs/api/: Environment_Variables.md  README.md  batch-api-design-analysis.md  enhanced-api-v0.8.0.md  migration-guide-v0.8.0.md  python-api-v0.9.0.md  (+13 more)
examples/: backend_comparison_demo.rs  debug_direct_io.rs  enhanced_api_examples.py  h2c_test_server.rs  hardware_detection.rs  issue_85_reproduction.rs  oplog_replay_basic.rs  performance_monitoring_demo.rs  profile_performance.sh  rust_api_basic_usage.rs  s3_backend_comparison.rs  test_aligned_buffers.rs  test_direct_io.rs  test_direct_io_comprehensive.rs  tls_test_server.rs
fork-patches/: README.md
integrations/dlio/: README.md  pyproject.toml
integrations/dlio/src/dlio_s3dlio_storage/: __init__.py
python/: run-bench.sh  test_config_npz.json  test_config_tfrecord.json  test_new_dlio_s3.py  verify_s3_objects.py
scripts/: apache_backend_performance_test.sh  build_performance_variants.sh  build_runtime_selection.sh  cli_performance_validation.sh  compare_backends.sh  compare_backends_performance.sh  gcs-native-env.template  gcs-s3-compat-env.template  install-system-deps.sh  long_duration_performance_test.sh  managed_performance_test.sh  quick_performance_test.sh  run_backend_comparison.sh  run_tfrecord_tests.sh  s3dlio-cli  sustained_performance_test.sh  test-gcs-comprehensive.sh  test-gcs-final.sh  test_azure_comprehensive.sh  test_azure_multi.sh  test_azure_range_engine.sh  test_delete_batch.sh  test_enhanced_performance.sh  test_gcs_backends.sh  test_gcs_community.sh  test_gcs_official.sh  test_list_buckets_gcs.sh  test_v0819_all_backends.sh
src/: HowToZeroCopy.md  adaptive_config.rs  api.rs  azure_client.rs  config.rs  constants.rs  data_gen.rs  data_gen_alt.rs  download.rs  file_store.rs  file_store_direct.rs  gcs_client.rs  gcs_constants.rs  google_gcs_client.rs  hardware.rs  lib.rs  list_containers.rs  memory.rs  mp.rs  multi_endpoint.rs  multipart.rs  numa.rs  object_size_cache.rs  object_store.rs  object_store_arrow.rs  object_store_logger.rs  page_cache.rs  prefetch.rs  profiling.rs  progress.rs  python_advanced_api.rs  python_api.rs  python_api.rs.current  python_api.rs.v071_with_compression  python_core_api.rs  range_engine.rs  range_engine_generic.rs  redirect_client.rs  reqwest_client.rs  s3_client.rs  (+8 more)
tests/: azure_blob_multi.rs  azure_blob_sequence.rs  azure_blob_smoke.rs  metadata_ops_tests.rs  object_format_tests.rs  performance_comparison.rs  s3_uri_endpoint_tests.rs  test_allocation_comparison.rs  test_allocation_overhead.rs  test_api_storage_config.rs  test_async_pool_dataloader.rs  test_azure_comprehensive.rs  test_azure_range_engine_integration.rs  test_backend_parity.rs  test_backend_performance_comparison.rs  test_before_after_performance.rs  test_buffer_pool_directio.rs  test_buffer_pool_validation.rs  test_cancellation.rs  test_checkpoint_advanced.rs  test_checkpoint_checksums.rs  test_checkpoint_integration.rs  test_comprehensive_python_v070.py  test_comprehensive_speed_benchmark.rs  test_comprehensive_streaming.rs  test_compression_all_backends.rs  test_compression_enhanced_reporting.rs  test_connection_pool_system.rs  test_cpu_utilization.rs  test_data-gen.rs  test_data-gen.rs.bak  test_data_gen_alt.rs  test_data_gen_seed.rs  test_data_generation_enhancement.rs  test_datagen_performance_validation.rs  test_dataloader.rs  test_definitive_speed_benchmark.rs  test_direct_io.rs  test_directio_range_engine.rs  test_error_handling.rs  (+41 more)
(+239 files in other folders)
