[workspace]
members = [".", "crates/s3dlio-oplog"]

# Workspace-level package metadata that can be inherited by all members
[workspace.package]
version = "0.9.65"
edition = "2021"
authors = ["Russ Fellows"]
license = "Apache-2.0"

[package]
name = "s3dlio"
version.workspace = true
edition.workspace = true

[lib]
name = "s3dlio"
crate-type = ["cdylib", "rlib"]      # cdylib → Python wheel, rlib → normal Rust

[package.metadata.maturin]
features = ["extension-module"]

[[bin]]
name = "s3-cli"
path = "src/bin/cli.rs"

[dependencies]
# AWS SDK - pinned to latest stable (update by running: cargo search aws-config)
aws-config         = "=1.8.14"
aws-sdk-s3         = "=1.124.0"

# Azure SDK crates (keep minor versions flexible; they evolve together)
azure_core = { version = "0" }          # Response/Body, paging, errors
azure_identity = { version = "0" }      # DefaultAzureCredential
azure_storage_blob = { version = "0" }   # Blob/Container/BlockBlob clients

# Google Cloud Storage SDK
# The official Google gRPC client (google-cloud-storage) is always compiled.
# 'gcs-community' is an optional legacy alternative (JSON-API, no RAPID support).
gcloud-storage = { version = "^1.2", optional = true }  # Community GCS client (opt-in only)
google-cloud-storage = { version = "^1.8" }             # Official Google GCS client (always on)
google-cloud-gax = { version = "^1.7" }                 # Google Cloud GAX (always on)
google-cloud-gax-internal = { version = "0.7.9", features = ["_internal-grpc-client"] }  # Direct dep: exposes gcs_constants

# Logging (tracing ecosystem for compatibility with dl-driver/s3-bench)
tracing = { version = "^0.1", features = ["log"] }  # Main tracing API with log compat
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }  # Subscriber for formatting
tracing-log = "^0.2"  # Bridge to capture log crate messages from dependencies

# --- async / net stack ----------------------------------------------------
tokio   = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["sync"] }
tokio-util = "^0.7"  # For CancellationToken and other utilities
async-stream = "^0.3"  # For stream! macro in list_stream implementations
# HTTP stack
hyper   = { version = "^1", features = ["client"] }
hyper-util = { version = "^0.1", features = ["client-legacy", "tokio"] }
hyper-rustls = "^0.27"
aws-smithy-http-client = { version = "^1", features = ["rustls-aws-lc"] }
aws-smithy-runtime-api = "^1"                         # ← Added for HTTP client types
rustls  = { version = "^0.23" }					# ← matches hyper‑rustls 0.27
webpki-roots = "^0.26"

# --- util / CLI / etc. ----------------------------------------------------
once_cell   = "^1.19"
dotenvy     = "^0.15"
anyhow      = "^1"
thiserror   = "1.0"
clap        = { version = "4", features = ["derive"] }
indicatif   = { version = "0.17", features = ["rayon"] }
serde       = { version = "^1.0", features = ["derive"] }
serde_json  = "^1.0"
regex       = "1.11"
futures     = "^0.3"
rand         = { version = "^0.9", features = ["std", "alloc"] }
rand_chacha  = { version = "^0.9" }
rand_xoshiro = { version = "^0.7" }
rand_pcg     = { version = "^0.3" }
bytemuck    = "^1.14"
tempfile    = "^3.20"
tfrecord    = "^0.15"
bytes       = "^1.10"
#zip        = { version = "^0.5", default-features = false }
zip         = { version = "^2.1", default-features = false }

# System-level I/O support
libc        = "^0.2"

# HDF5 support (optional - requires libhdf5 system library, not available on all platforms)
# Enable with: cargo build --features hdf5
# Note: Not included in defaults to allow building on WSL/minimal environments
hdf5-metno = { version = "^0.12", optional = true }
hdf5-metno-sys = { version = "^0.11", optional = true }

# -------- Python bindings ----------
pyo3           = { version = "^0.27", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "^0.27", features = ["tokio-runtime"], optional = true }
numpy        = "^0.27"
ndarray      = "^0.17"
# ndarray-npy removed - we use custom NPY/NPZ implementation for better performance and zero-copy

# Other (updated rand ecosystem to 0.9 for consistency)
rayon       = { version = "^1.10" }
num_cpus    = "^1.16"
chrono      = "^0.4"
#io          = "^0.02"
io          = "^0.0"
crc32fast   = "^1.4"
glob        = "^0.3"

# Performance monitoring
hdrhistogram = "^7.5"    # High Dynamic Range histograms for detailed analysis
metrics     = "^0.23"    # Metrics collection framework with histogram support
parking_lot = "^0.12"    # High-performance RwLock for metrics
dashmap     = "^6.1"     # Lock-free concurrent HashMap for Python client caching

async-trait  = "^0.1"
futures-core = "^0.3"
futures-util = "^0.3"

zstd         = "^0.13"
humantime    = "^2.2"
tokio-sync   = "^0.1.8"
base64 = "0.22.1"

# --- Arrow backend (optional, enabled via "arrow-backend" feature) -------
object_store = { version = "0.13", default-features = false, features = ["aws", "azure", "http", "gcp"], optional = true }
url = { version = "2.5", optional = true }

# --- Enhanced HTTP client with HTTP/2 support --------------------------------
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "hickory-dns"], optional = true }

# --- OpenSSL (vendored) ------------------------------------------------------
# Statically compile OpenSSL so manylinux wheel builds never need a system
# openssl-devel package. Required because transitive deps (Azure SDK → reqwest
# → native-tls) pull in openssl-sys regardless of our own TLS stack choice.
openssl = { version = "0.10", features = ["vendored"] }

# --- High-performance memory and file I/O ------------------------------------
nix = { version = "0.31", features = ["fs"], optional = true }  # For O_DIRECT and positioned I/O

# --- NUMA topology detection and thread pinning (optional) ------------------
hwlocality = { version = "1.0.0-alpha.11", optional = true }  # NUMA topology detection (matches dgen-rs)
core_affinity = { version = "0.8", optional = true }    # Thread pinning to CPU cores

# --- Profiling (optional, enabled via "profiling" feature) ---------------
# tracing and tracing-subscriber are now main dependencies above
console-subscriber = { version = "0.4", optional = true }
pprof             = { version = "0.15", features = ["flamegraph"], optional = true }


[dev-dependencies]
tokio         = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-sync   = "^0.1.8"
futures-util  = "^0.3"
async-trait   = "^0.1"   # needed by the mock datasets
criterion     = { version = "0.5", features = ["html_reports"] }

[features]
#default = []
# Note: 'numa' and 'hdf5' are intentionally excluded from defaults.
# - 'numa' requires the hwloc2 C library (not available on WSL/minimal systems)
# - 'hdf5' requires libhdf5 (not available on WSL/minimal systems)
# Enable these manually: cargo build --features numa,hdf5
default = ["s3", "native-backends", "thread-pinning"]
s3 = []
native-backends = []                    # Current AWS/Azure implementations
gcs-community = ["dep:gcloud-storage"]  # Legacy community GCS client (JSON API, no RAPID support; conflicts with default)
arrow-backend = ["dep:object_store", "dep:url"]  # Apache Arrow object_store backend
enhanced-http = ["dep:reqwest"]      # Enhanced HTTP client with HTTP/2 support
direct-io = ["dep:nix"]              # O_DIRECT file I/O for high-performance storage
numa = ["dep:hwlocality"]  # NUMA topology detection - requires hwloc2 C library (optional, not in defaults)
thread-pinning = ["dep:core_affinity"]  # CPU core affinity for thread pinning (pure Rust, safe for all platforms)
hdf5 = ["dep:hdf5-metno", "dep:hdf5-metno-sys"]  # HDF5 data format support - requires libhdf5 (optional, not in defaults)
profiling = ["dep:console-subscriber", "dep:pprof"]  # tracing deps now always available
extension-module = ["dep:pyo3", "dep:pyo3-async-runtimes"]     # suppresses the cfg warning when building the wheel
experimental-http-client = []        # Enable custom hyper_builder optimizations (requires patched aws-smithy-http-client)
test-npy-09 = []                     # Test ndarray-npy 0.9 API compatibility (temporary for testing)

[[bench]]
name = "performance_microbenchmarks"
harness = false

[[bench]]
name = "filesystem_io_benchmark"
harness = false

[[bench]]
name = "s3_microbenchmarks"
harness = false

[[bench]]
name = "simple_test"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Vendored fork of google-cloud-storage with set_appendable() added to WriteObject
# builder for GCS RAPID (Hyperdisk ML) bucket support.
# Pending upstream PR: https://github.com/googleapis/google-cloud-rust
# ---------------------------------------------------------------------------
# Vendored patch — google-cloud-storage does not yet expose set_appendable()
# on its WriteObject builder.  We vendor a minimal fork that adds the method.
#
# IMPORTANT FOR WHEEL / PIP BUILDERS
# ==================================
# The `vendor/google-cloud-storage/` directory MUST be committed to git so
# that:
#   1. Anyone who clones the repo can run `cargo build` / `maturin build`.
#   2. Maturin includes the directory in the sdist it publishes to PyPI,
#      allowing `pip install s3dlio --no-binary s3dlio` to work.
#
# If you see this error after cloning:
#   error: failed to get `google-cloud-storage` ...
#   ... directory does not exist: .../vendor/google-cloud-storage
# run:  git submodule update --init  (or check out via git LFS if enabled)
#
# MIGRATION PATH
# ==============
# Once https://github.com/googleapis/google-cloud-rust adds set_appendable()
# upstream, remove this section entirely and delete the vendor/ directory.
# Alternatively, point to a git-fork to avoid committing vendor source:
#   google-cloud-storage = { git = "https://github.com/<fork>/google-cloud-rust",
#                             rev  = "<commit-hash>" }
# ---------------------------------------------------------------------------
[patch.crates-io]
google-cloud-storage = { path = "vendor/google-cloud-storage" }
# s3dlio patch: configure HTTP/2 flow-control windows for high-throughput GCS gRPC
# (see vendor/google-cloud-gax-internal/src/grpc.rs — make_endpoint function)
google-cloud-gax-internal = { path = "vendor/google-cloud-gax-internal" }
