[project]
name = "s3dlio"
version = "0.9.27"
description = "High-performance S3, Azure, GCS, and file system operations for AI/ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = { text = "AGPL-3.0" }
authors = [{ name = "Russ Fellows", email = "russ.fellows@gmail.com" }]

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[tool.maturin]
module-name   = "s3dlio._pymod"   # put the .so inside the s3dlio package
python-source = "python"
python-packages = ["s3dlio"]      # <-- NOTE the key name
features = ["extension-module"]    # ensure extension-module feature is enabled

[tool.uv.workspace]
members = ["python3.12"]

