[project]
name = "s3dlio"
version = "0.9.70"
description = "High-performance Object Storage Library for Pytorch, Jax and Tensorflow: Object support inlcudes S3, Azure, GCS, and file system operations for AI/ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
]
license = { text = "Apache-2.0" }
authors = [{ name = "Russ Fellows", email = "russ.fellows@gmail.com" }]

[project.urls]
Homepage = "https://github.com/russfellows/s3dlio"
Repository = "https://github.com/russfellows/s3dlio"
Documentation = "https://github.com/russfellows/s3dlio/blob/main/README.md"
Issues = "https://github.com/russfellows/s3dlio/issues"

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
jax = ["jax>=0.4.0", "jaxlib>=0.4.0"]
tensorflow = ["tensorflow>=2.16.0"]
all = ["torch>=2.0.0", "jax>=0.4.0", "jaxlib>=0.4.0", "tensorflow>=2.16.0"]

# ── Optional Rust-feature extras ─────────────────────────────────────────────
# NOTE: Pre-built wheels from PyPI do NOT include these features.
# To install with these features you must build from source (see README).
# NOTE (maintainers): default published wheel is S3-focused; full backends are
# source-build-only for now via `--features extension-module,full-backends`.
# The Python dependencies below are listed for clarity; the Rust features are
# enabled by setting the MATURIN_PEP517_ARGS environment variable.
#
# Quick how-to (requires libhdf5-dev / libhwloc-dev system packages):
#   uv pip install "s3dlio[hdf5]"  --no-binary s3dlio \
#       --config-settings "cargo-extra-args=--features hdf5,extension-module"
#
#   uv pip install "s3dlio[numa,hdf5]" --no-binary s3dlio \
#       --config-settings "cargo-extra-args=--features numa,hdf5,extension-module"
#
# Or via environment variable:
#   MATURIN_PEP517_ARGS="--features numa,hdf5,extension-module" \
#       uv pip install "s3dlio[numa,hdf5]" --no-binary s3dlio
hdf5 = ["h5py>=3.0.0"]  # HDF5 read support; native HDF5 gen needs --features hdf5 (libhdf5-dev)
numa = []               # NUMA topology; needs --features numa (libhwloc-dev)

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "h5py>=3.0.0",
    "maturin>=1.0.0",
    "patchelf>=0.17.0",  # Required for maturin on Linux
]

[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

[tool.maturin]
module-name   = "s3dlio._pymod"   # put the .so inside the s3dlio package
python-source = "python"
python-packages = ["s3dlio"]      # <-- NOTE the key name
features = ["extension-module"]    # ensure extension-module feature is enabled

[tool.uv.workspace]
members = ["python3.12"]

